# simple-data-comparator

./: .env.example  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
src/compare/: dataframe_compare.py
src/loaders/: csv_loader.py  sql_loader.py  sqlserver_mssqlpy.py  sqlserver_pytds.py
src/utils/: normalize.py
