
[project]
name = "comparateur-donnees"
version = "0.1.0"
description = "Comparaison de DataFrames depuis SQL/CSV (Pandas + SQLAlchemy + Streamlit)"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.2.0",
    "SQLAlchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "pyodbc>=5.1.0",
    "streamlit>=1.31.0",
    "python-dotenv>=1.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]
